--- a/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -17,8 +17,7 @@
 
     <!-- Custom styles for this template-->
     <link href="~/Admin/css/sb-admin-2.min.css" rel="stylesheet">
-@*    <link href="~/Content/PagedList.css" rel="stylesheet" />
-*@
+    <link href="~/Content/PagedList.css" rel="stylesheet" />
 
 </head>
 
@@ -59,13 +58,13 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">List</h6>
-                        <a class="collapse-item" href="/Contracts/Index">Contracts List</a>
-                        <a class="collapse-item" href="/ContractProcesses/Index">Contract Process List</a>
-                        <a class="collapse-item" href="/Projects/Index">Project List</a>
-                        <a class="collapse-item" href="/ProjectCategories/Index">Project Category List</a>
-                        <a class="collapse-item" href="/DesignTypes/Index">Design Type List</a>
-                        <a class="collapse-item" href="/DesignPackages/Index">Design Package List</a>
-                        <a class="collapse-item" href="/Images/Index">Image List</a>
+                        <a class="collapse-item" href="/Admin/Contracts/Index">Contracts List</a>
+                        <a class="collapse-item" href="/Admin/ContractProcesses/Index">Contract Process List</a>
+                        <a class="collapse-item" href="/Admin/Projects/Index">Project List</a>
+                        <a class="collapse-item" href="/Admin/ProjectCategories/Index">Project Category List</a>
+                        <a class="collapse-item" href="/Admin/DesignTypes/Index">Design Type List</a>
+                        <a class="collapse-item" href="/Admin/DesignPackages/Index">Design Package List</a>
+                        <a class="collapse-item" href="/Admin/Images/Index">Image List</a>
 
 
                     </div>
