--- a/Areas/Admin/Views/Contracts/Index.cshtml
+++ b/Areas/Admin/Views/Contracts/Index.cshtml
@@ -1,76 +1,120 @@
-﻿@model IEnumerable<AlluringDecors.Models.Contract>
-
+﻿@*@model IEnumerable<AlluringDecors.Models.Contract>*@
+@model PagedList.IPagedList<AlluringDecors.Models.Contract>
+@using PagedList.Mvc
 @{
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Contracts List</h2>
+<div class="col-lg-12 col-md-12" style="margin-bottom:50px;">
+    <div class="row">
+        @using (Html.BeginForm("Index", "Contracts", FormMethod.Get, new { @class = "d-none d-sm-inline-block form-inline mr-auto ml-md-6 my-2 my-md-0 mw-100 navbar-search col-lg-4 col-md-4" }))
+        {
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+
+            <div class="input-group">
+                @Html.TextBox("Search", ViewBag.CurrentFilter as string, new { @class = "form-control bg-light border-1 small" })
+                <div class="input-group-append">
+                    <button class="btn btn-primary" type="submit">
+                        <i class="fas fa-search fa-sm"></i>
+                    </button>
+                </div>
+
+            </div>
+
+
+        }
+        <div class="col-lg-2 col-md-2"></div>
+        <div class="col-lg-6 col-md-6">
+            <a href="/Admin/Contracts/Create" style="float:right" class="btn btn-primary">Create</a>
+        </div>
+    </div>
+</div>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.ContractName)
+            @Html.ActionLink("Contract Name", "Index", new
+            {
+                sortOrder = ViewBag.NameSortParm,
+
+           currentFilter = ViewBag.CurrentFilter
+       });
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.TotalPrice)
+           Total Price
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ContractStartDate)
+            @Html.ActionLink(" Contract StartDate", "Index", new
+  {
+      sortOrder = ViewBag.DateSortParm,
+currentFilter = ViewBag.CurrentFilter
+     });
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ContractEndDate)
+           Contract EndDate
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ContractType)
+            Contract Type
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ContractStatus)
+            Contract Status
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ContractSigningDate)
+            @Html.ActionLink("Contract SigningDate", "Index", new
+         {
+             sortOrder = ViewBag.DateSortParm,
+     currentFilter = ViewBag.CurrentFilter
+            });
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Project.ProjectName)
+            Project Name
         </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.ContractName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TotalPrice)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ContractStartDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ContractEndDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ContractType)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ContractStatus)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ContractSigningDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Project.ProjectName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.ContractName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TotalPrice)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ContractStartDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ContractEndDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ContractType)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ContractStatus)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ContractSigningDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Project.ProjectName)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+            </td>
+        </tr>
+    }
 
 </table>
+<div class="row">
+    <div class="col-sm-12 col-md-10">
+        Current @(Model.PageCount<Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount Page
+    </div>
+    <div class="col-sm-12 col-md-2">
+        @Html.PagedListPager(Model, page => Url.Action("Index", new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter, @class = "btn btn-sm btn-primary" }))
+
+    </div>
+</div>
